impl/tests/macros/forbidden_visibility.stderr
error: pub(in ...) can't be used
 --> $DIR/forbidden_visibility.rs:8:9
  |
8 |         pub(in super::super) enum ABRM {
  |         ^^^^^^^^^^^^^^^^^^^^
